--- a/styles/style.css
+++ b/styles/style.css
@@ -188,11 +188,14 @@ font-weight: normal;
   height: 790px;
   background-color: #F2F2F2;
   background-image: url("../images/feynman.png");
+  background-size: 876px 637px;
   background-repeat: no-repeat;
   background-position: bottom left;
+  border:1px solid purple;
 }
 .feinman__title {
   width: 648px;
+  padding-top: 100px;
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
