--- a/styles/style.css
+++ b/styles/style.css
@@ -10,76 +10,77 @@
 }
 
 .header {
+  overflow: hidden;
+  position: static;
   display: flex;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
   /* выше установили ограничения для секции */
 }
-.logo__place_header{
+.logo__place__header{
+  position: absolute;
   margin-top: 30px;
- 
+  margin-left: 64px;
+  width: 183px;
+  height: 32px;
+  background-image: url('../images/logo_place_header.svg');
+  background-size: cover;
 }
 .logo{
-  position: absolute;
-  top: 30px;
+  width: 183px;
+  height: 32px;
 }
 .header__title{
   width: 730px;
-  color: black;
   display: flex;
   justify-content: center;
   flex-direction: column;
   font-weight: bold;
   font-size: 102px;
   line-height: 96px;
+  margin-left: 64px;
+  color: black;
 }
 .header__subtitle{
+  position: absolute;
   width: 388px;
+  margin-left: 64px;
+  bottom: 30px;
   color: black;
   font-size: 18px;
   line-height: 25px;
-  position: absolute;
-  bottom: 30px;
   font-weight: normal;
 }
-.header_link{
-color:#2f80ed;
-text-decoration: none;
-}
-
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-.header__square-pic {
-  position: absolute;
-  top: 64px;
-  right: 0;
-  height: 568px;
-  width: 568px;
-  background-color: #2f80ed;
-  /*alt: 'синий квадрат'*/;
+.header__link{
+  color:#2f80ed;
+  text-decoration: none;
 }
 .header__main-illustration{
-  background-image: url("../images/header-image.png");
-  background-size: cover;
   position: absolute;
-  z-index:1;
   width: 765px;
   height: 608px;
+  background-image: url('../images/header-image.png');
+  background-size: cover;
+  z-index: 1;
   right: 0;
   bottom: 0;
-
 }
-
-.project_margin_s{
-  margin-left: 64px;
+.header__square-pic{
+  position: absolute;
+  width: 565px;
+  height: 565px;
+  top: 64px;
+  background-color: #2f80ed;
+  right: 0;
 }
-
-/* и элемента с модификатором вида ключ-значение */
-
+.content{}
 .description{
   display: flex;
   justify-content: space-around;
   margin: 100px 0;
+  padding-top: 100px;
 }
 .two-columns{
   display: flex;
@@ -104,50 +105,46 @@ text-decoration: none;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  
 }
 .two-columns__span-accent{
   margin-bottom: 30px;
-}
-.description{
-  padding-top: 100px;
-  
 }
 .digits{
   display: block;
 }
 .section-title{
-  display: flex;
-  margin: 0 auto;
   width: 60%;
-  height: 84px;
   margin-top: 100px;
+  margin-bottom: 20px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
   line-height: 69px;
   font-size: 60px;
   font-weight: bold;
-  justify-content: center;
+
 }
 .section-subtitle{
-  display: flex;
-  justify-content: center;
+  width: 60%;
   margin: 0 auto;
   margin-top: 20px;
-  width: 60%;
+  display: flex;
+  justify-content: center;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
 }
 .table{
+  width: 1100px;
+  margin: 0 auto;
+  padding-bottom: 100px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin: 0 auto;
-  padding-bottom: 100px;
-  width: 1100px;
 }
 .table__cell{
   width: 250px;
-  margin-top: 60px;
+  padding-top: 60px;
 }
 .table__heading{
   line-height: 1.15;
@@ -156,82 +153,88 @@ text-decoration: none;
   margin-bottom: 20px;
 }
 .table__text{
-  margin-top: 20px;
+  padding-top: 20px;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
 }
-.feynman {
+.feynman{
   position: relative;
   height: 790px;
-  background-color: #F2F2F2;
   background-image: url('../images/feynman.png');
-  background-size: 876px 637px;
+  background-size: 867px 637px;
+  background-position: left bottom;
+  background-color: #f2f2f2;
   background-repeat: no-repeat;
-  background-position: bottom left;
-  padding-top: 100px;
 }
-.feynman__title {
+.feyman__title{
+  padding-top: 100px;
   width: 648px;
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
   text-align: center;
-  margin: 0 auto 70px;
+  margin: 0 auto;
 }
-.feynman__subtitle {
+.feyman__subtitle{
+  padding-top: 70px;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
   text-align: center;
   margin: 0 auto;
 }
-.feynman__link {
+.feyman__link{
+  top: 50%;
+  right: 48px;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
   text-decoration: none;
   color: #000;
   position: absolute;
-  top: 50%;
-  right: 48px;
 }
 .kaufman{
   overflow: hidden;
-  position: relative;
   background-color: #1f1f1f;
-  border: #2f80ed solid 1px;
-}
-
-.section-title_theme_dark{
-  margin-top: 90px;
-  color: white;
-}
-.section-subtitle_theme_dark{
-  color: white;
-}
-.table_theme_dark table{
   position: relative;
-  z-index: 10000000;
 }
-.table__cell_theme_dark{
-  margin-top: 80px;
+.section-title__theme__dark{
+  color: white;
+  margin-top: 90px;
+  
+}
+.section-subtitle__theme__dark{
+  color: white;
+  
+}
+.table__theme__dark{
+  margin-bottom: 90px;
+  
+}
+.table__cell__theme__dark{
   width: 200px;
+  padding-top: 80px;
+  z-index: 1;
+  
 }
-.table__heading_theme_dark{
+.table__heading__theme__dark{
   color: white;
+  
 }
-.table__text_theme_dark{
+.table__text__theme__dark{
   color: white;
+  
 }
-.table__text_theme_dark_up{
-  z-index: 2;
-}
-.kaufman_triangle{
-  background-image: url("./images/kaufman-triangle.svg");
-  background-size: 877px 877px;
+.kaufman__triangle{
+  width: 877px;
+  height: 877px;
+  background-image: url('../images/kaufman-triangle.svg');
   position: absolute;
   right: -210px;
+  background-size: cover;
+  top: 0;
+  z-index: 0;
 }
 .footer{
   min-height: 350px;
@@ -239,53 +242,56 @@ text-decoration: none;
   display: flex;
   padding-top: 60px ;
   padding-bottom: 40px;
-  border: pink 1px solid;
 }
 .footer__columns{
   width: 90%;
   margin: 0 auto;
+  display: flex;
   flex-direction: row;
-  border: red solid 1px;
+  justify-content: space-between;
 }
-.footer__column__content__info{
-  color: white;
-  display: flex;
-  flex-direction: column;
-  border: purple 1px solid;
-}
-.footer__column__content__social{
-  color: white;
-  display: flex;
-  flex-direction: column;
-  border: green 1px solid;
-}
-.footer__column__content_copyright{
+.footer__column__content__copyright{
   flex-basis: 711px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-.logo__place__footer{
+.footer__column__content__info{
+  color: white;
+  display: flex;
+  flex-direction: column;
+}
+.footer__column__content__social{
+  color: white;
+  display: flex;
+  flex-direction: column;
+}
+.logo__palce__footer{
   position: relative;
-  size: 135px 35px;
+  background-image: url('../images/logo_place_footer.svg');
+  background-size: cover;
+  background-position: left top;
 }
 .footer__author{
   color: white;
   padding-top: 18px;
   padding-bottom: 18px;
   line-height: 25px;
-  font-size: 18px;  
+  font-size: 18px;
+  bottom: 0;
+  margin: 0;
 }
 .footer__column-heading{
   color: white;
+  padding-bottom: 20px;
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
   margin: 0;
-  padding-bottom: 20px;
 }
 .footer__column-links{
   color: white;
+  margin-bottom: 16px;
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
@@ -293,5 +299,5 @@ text-decoration: none;
 }
 .footer__social-icon{
   size: 16px;
-  margin-right: 10px;
+  padding-right: 10px;
 }
