style & header fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@
 
 .header {
   overflow: hidden;
-  position: static;
+  position: relative;
   display: flex;
   height: 100vh;
   min-height: 600px;
