--- a/styles/style.css
+++ b/styles/style.css
@@ -114,6 +114,7 @@
 }
 .digits{
   display: block;
+  margin-bottom: 100px;
 }
 .section-title{
   width: 60%;
@@ -140,7 +141,6 @@
 .table{
   width: 1100px;
   margin: 0 auto;
-  padding-bottom: 100px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
