--- a/sprint2/blocks/content/content.css
+++ b/sprint2/blocks/content/content.css
@@ -5,14 +5,24 @@
 @import url(../table/table.css);
 @import url(../section-title/section-title.css);
 @import url(../section-subtitle/section-subtitle.css);
-@import url(../);
-@import url(../);
-@import url();
-@import url();
+@import url(../techniques/techniques.css);
+@import url(../video/video.css);
+@import url(../cards/cards.css);
+@import url(../oakley/oakley.css);
 @import url(../feynman/feynman.css);
 @import url(../digits/digits.css);
-@import url();
+@import url(../khan/khan.css);
 @import url(../kaufman/kaufman.css);
-@import url();
+@import url(../resources/resources.css);
 @import url(../footer/footer.css);
 .content {}
+.page {
+    min-width: 1100px;
+    /* мы ещё не умеем делать мобильную версию сайта, */
+    /* поэтому выше установлена минимальная ширина страницы */
+    max-width: 1600px;
+    /* выше установили ограничение по максимальной ширине */
+    margin: 0 auto;
+    /* выше для экранов больше 1600px отцентрировали весь контент */
+    font-family: 'Helvetica Neue', Arial, sans-serif;
+}
