--- a/sprint2/blocks/feynman/feynman.css
+++ b/sprint2/blocks/feynman/feynman.css
@@ -4,7 +4,7 @@
 .feynman {
     position: relative;
     height: 790px;
-    background-image: url('../images/feynman.png');
+    background-image: url('../../images/feynman.png');
     background-size: 867px 637px;
     background-position: left bottom;
     background-color: #f2f2f2;
