--- a/sprint2/blocks/section-title/section-title.css
+++ b/sprint2/blocks/section-title/section-title.css
@@ -6,7 +6,7 @@
     margin: 0 auto;
     display: flex;
     justify-content: center;
-    line-height: 69px;
+    line-height: 1.15;
     font-size: 60px;
     font-weight: bold;
 }
