--- a/sprint2/blocks/cards/__item/cards__item.css
+++ b/sprint2/blocks/cards/__item/cards__item.css
@@ -1,7 +1,7 @@
 .cards__item{
   width: 240px;
-  margin-right: 100px;
+  padding-right: 100px;
 }
 .cards__item:nth-child(3n) {
-    margin: 0px;
+    padding: 0px;
   }
