--- a/sprint2/blocks/rotation/rotation.css
+++ b/sprint2/blocks/rotation/rotation.css
@@ -9,6 +9,7 @@
 .rotation{
     transform: rotate(-15deg);
     overflow: hidden;
+    -webkit-animation: rotation 20s linear infinite;
     animation: rotation 20s linear infinite;
     z-index: 0;
 }
