--- a/sprint2/blocks/cards/__description/cards__description.css
+++ b/sprint2/blocks/cards/__description/cards__description.css
@@ -1,8 +1,9 @@
 .cards__description {
-    margin-top: 16px;
-    margin-bottom: 0px;
+    padding-top: 16px;
+    padding-bottom: 0px;
     line-height: 23px;
     font-size: 18px;
     font-weight: normal;
     text-align: center;
+    margin: 0;
   }
