--- a/sprint2/blocks/cards/__title/cards__title.css
+++ b/sprint2/blocks/cards/__title/cards__title.css
@@ -1,7 +1,8 @@
 .cards__title {
-    margin-top: 43px;
+    padding-top: 43px;
     line-height: 1.15;
     font-size: 24px;
     font-weight: 700;
     text-align: center;
+    margin: 0;
   }
