--- a/sprint2/blocks/section-subtitle/section-subtitle.css
+++ b/sprint2/blocks/section-subtitle/section-subtitle.css
@@ -2,7 +2,7 @@
 .section-subtitle {
     width: 60%;
     margin: 0 auto;
-    margin-top: 20px;
+    padding-top: 20px;
     display: flex;
     justify-content: center;
     line-height: 34px;
