--- a/sprint2/blocks/table/__heading/table__heading.css
+++ b/sprint2/blocks/table/__heading/table__heading.css
@@ -3,5 +3,6 @@
     line-height: 1.15;
     font-size: 24px;
     font-weight: bold;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
+    margin: 0;
 }
