--- a/sprint2/blocks/header/__subtitle/header__subtitle.css
+++ b/sprint2/blocks/header/__subtitle/header__subtitle.css
@@ -1,6 +1,6 @@
 .header__subtitle {
     position: absolute;
-    width: 388px;
+    max-width: 388px;
     left: 64px;
     bottom: 30px;
     color: black;
