--- a/sprint2/blocks/video/video.css
+++ b/sprint2/blocks/video/video.css
@@ -2,5 +2,6 @@
 @import url(./__iframes/video__iframes.css);
 .video {
     padding-top: 100px;
-    max-height: 442px;
+    height: 442px;
+    position: relative;
 }
