--- a/sprint2/blocks/content/content.css
+++ b/sprint2/blocks/content/content.css
@@ -1,4 +1,3 @@
-@import url(../link/link.css);
 @import url(../header/header.css);
 @import url(../logo/logo.css);
 @import url(../description/description.css);
@@ -16,6 +15,7 @@
 @import url(../kaufman/kaufman.css);
 @import url(../resources/resources.css);
 @import url(../footer/footer.css);
+@import url(../rotation/rotation.css);
 .content {}
 
 .page {
