--- a/sprint2/blocks/footer/footer.css
+++ b/sprint2/blocks/footer/footer.css
@@ -2,6 +2,12 @@
 @import url(./__author/footer__author.css);
 @import url(./__columns/footer__columns.css);
 @import url(./__social-icon/footer__social-icon.css);
+@import url(./__column/_content/footer__column_content_copyright.css);
+@import url(./__column/_content/footer__column_content_info.css);
+@import url(./__column/_content/footer__column_content_social.css);
+@import url(./__column/_heading/footer__column-heading.css);
+@import url(./__column/_link/footer__column-link.css);
+@import url(./__column/_links/footer__column-links.css);
 .footer {
     min-height: 350px;
     background-color: #1f1f1f;
