--- a/sprint2/blocks/header/__title/header__title.css
+++ b/sprint2/blocks/header/__title/header__title.css
@@ -1,5 +1,5 @@
 .header__title {
-    width: 730px;
+    max-width: 730px;
     display: flex;
     justify-content: center;
     flex-direction: column;
