--- a/sprint2/blocks/khan/__buy-link/khan__buy-link.css
+++ b/sprint2/blocks/khan/__buy-link/khan__buy-link.css
@@ -1,8 +1,13 @@
-.khan__buy-link {
-    line-height: 42px;
-    font-size: 30px;
-    font-weight: normal;
-    color: #2f80ed;
-    position: absolute;
-    text-decoration: none;
-}
+    .khan__buy-link {
+        line-height: 42px;
+        font-size: 30px;
+        font-weight: normal;
+        color: #2f80ed;
+        position: absolute;
+        text-decoration: none;
+    }
+    
+    .khan__buy-link:hover {
+        opacity: 0.4;
+        transition: opacity linear 0.2s;
+    }
