--- a/sprint2/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/sprint2/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,5 +1,8 @@
 .resources__logo-zone {
+    display: flex;
+    justify-content: space-between;
     width: 1100px;
     padding-top: 80px;
     margin: 0 auto;
+    list-style-type: none;
 }
