--- a/sprint2/blocks/section-subtitle/section-subtitle.css
+++ b/sprint2/blocks/section-subtitle/section-subtitle.css
@@ -1,6 +1,6 @@
 @import url(./_theme/section-subtitle_theme_dark.css);
 .section-subtitle {
-    width: 60%;
+    max-width: 60%;
     margin: 0 auto;
     padding-top: 20px;
     display: flex;
