--- a/russian-travel/blocks/intro/__text/intro__text.css
+++ b/russian-travel/blocks/intro/__text/intro__text.css
@@ -1,4 +1,6 @@
-.intro__text{
-    font-size: 1em;
-    line-height: 1.5;
+.intro__text {
+	width: 94%;
+	font-size: 0.9em;
+	line-height: 1.7;
+	
 }
