--- a/russian-travel/blocks/lead/__subtitle/lead__subtitle.css
+++ b/russian-travel/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,6 @@
-.lead__subtitle{
-    margin: 0 auto;
-    
-    width: 60%;
-    text-align: center;
+.lead__subtitle {
+	margin: 0 auto;
+	width: 62%;
+	text-align: center;
+	font-size: 1.98em;
 }
