--- a/russian-travel/blocks/lead/__title/lead__title.css
+++ b/russian-travel/blocks/lead/__title/lead__title.css
@@ -1,6 +1,6 @@
-
-.lead__title{
-    text-align: center;
-    max-width: 75%;
-    margin: 0 auto;
+.lead__title {
+	text-align: center;
+	max-width: 75%;
+	margin: 0 auto;
+	font-size: 6.5em;
 }
