--- a/russian-travel/fonts/fonts.css
+++ b/russian-travel/fonts/fonts.css
@@ -1,11 +1,11 @@
-@font-face {
+/*@font-face {
     font-family: 'Inter';
     font-style:  normal;
     font-weight: 400;
     font-display: swap;
     src: url("./Inter-Regular.woff2") format("woff2"),
          url("./Inter-Regular.woff") format("woff");
-  }
+  }*/
   
   @font-face {
     font-family: 'Inter';
@@ -24,4 +24,11 @@
     src: url("./Inter-Black.woff2") format("woff2"),
          url("./Inter-Black.woff") format("woff");
   }
-  
+  @font-face {
+     font-family: 'Inter';
+     font-style:  normal;
+     font-weight: 200;
+     font-display: swap;
+     src: url("./Inter-ExtraLight.woff2") format("woff2"),
+          url("./Inter-ExtraLight.woff") format("woff");
+   }
