--- a/russian-travel/blocks/cover/__subtitle/cover__subtitle.css
+++ b/russian-travel/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,28 @@
-.cover__subtitle {
-    width: 39%;
-    text-align: center;
-    margin: 0 auto;
-    padding: 0% 0% 14% 0;
-}
+    .cover__subtitle {
+        width: 41%;
+        text-align: center;
+        margin: 0 auto;
+        padding: 0% 0% 18% 0;
+        font-size: 1.1em;
+    }
+    
+    @media (max-width:1024px) {
+        .cover__subtitle {
+            font-size: 1em;
+        }
+    }
+    
+    @media(max-width:768px) {
+        .cover__subtitle {
+            width: 50%;
+            padding: 0% 0% 15% 0;
+        }
+    }
+    
+    @media(max-width:320px) {
+        .cover__subtitle {
+            width: 90%;
+            font-size: 0.799em;
+            padding: 0% 0% 8% 0;
+        }
+    }
