--- a/russian-travel/blocks/cover/__overlay/cover__overlay.css
+++ b/russian-travel/blocks/cover/__overlay/cover__overlay.css
@@ -1,4 +1,9 @@
-.cover__overlay{
-    background-color: rgba(42, 44, 47, 0.3);
-    width: 100%;
+.cover__overlay {
+	background-color: rgba(42, 44, 47, 0.3);
+	width: 100%;
+	text-decoration: none;
+	color: #FFF;
+}
+.cover__overlay:hover{
+    background-color:rgba(42, 44, 47, 0.8);   
 }
