--- a/russian-travel/blocks/footer/__link/footer__link.css
+++ b/russian-travel/blocks/footer/__link/footer__link.css
@@ -1,8 +1,24 @@
-.footer__link{
+.footer__link {
     text-decoration: none;
     color: #ffffff;
     font-size: 1em;
     line-height: 1em;
     height: 1%;
     padding-right: 1%;
+}
+
+.footer__link:last-child {
+    padding-right: 46%;
+}
+
+@media (min-width:768px) and (max-width:1279px) {
+    .footer__link {
+        font-size: 0.8em;
+    }
+}
+
+@media(min-width:320px) and (max-width:767px) {
+    .footer__link {
+        padding-bottom: 5%;
+    }
 }
