--- a/russian-travel/blocks/header/__logo/header__logo.css
+++ b/russian-travel/blocks/header/__logo/header__logo.css
@@ -1,3 +1,9 @@
-.header__logo{
-    
+.header__logo {
+    width: 177px;
+}
+
+@media(max-width:320px) {
+    .header__logo {
+        width: 142px
+    }
 }
