--- a/russian-travel/blocks/header/header.css
+++ b/russian-travel/blocks/header/header.css
@@ -1,8 +1,7 @@
 @import url(./__lang-link/header__lang-link.css);
+@import url(./__logo/header__logo.css);
 .header {
-    display: flex;
-    flex-direction: row;
-    width: 93%;
-    padding-top: 2%;
-    margin: 0 auto;
+    width: 82.25%;
+    position: relative;
+    padding: 5%;
 }
