--- a/russian-travel/blocks/intro/__list/intro__list.css
+++ b/russian-travel/blocks/intro/__list/intro__list.css
@@ -1,4 +1,12 @@
-.intro__list{
-    font-size: 0.9em;
-    line-height: 1.6;
-}
+    .intro__list {
+        font-size: 0.8em;
+        line-height: 1.5;
+        margin: 0;
+        padding-bottom: 11.98%;
+    }
+    
+    @media(max-width:320px) {
+        .intro__list {
+            padding-bottom: 15%;
+        }
+    }
