--- a/russian-travel/blocks/intro/intro.css
+++ b/russian-travel/blocks/intro/intro.css
@@ -1,7 +1,14 @@
 @import url(./__title/intro__title.css);
 @import url(./__text/intro__text.css);
 @import url(./__list/intro__list.css);
-.intro{
+.intro {
     width: 60%;
     padding-left: 10%;
+}
+
+@media(max-width:768px) {
+    .intro {
+        width: 100%;
+        padding-left: 4%;
+    }
 }
