--- a/russian-travel/blocks/lead/__title/lead__title.css
+++ b/russian-travel/blocks/lead/__title/lead__title.css
@@ -1,6 +1,20 @@
 .lead__title {
-	text-align: center;
-	max-width: 75%;
-	margin: 0 auto;
-	font-size: 6.5em;
+    text-align: center;
+    max-width: 77.313%;
+    margin: 0 auto;
+    font-size: 6em;
+    line-height: 1.0416em;
+}
+
+@media (max-width:1024px) {
+    .lead__title {
+        max-width: 81.313%;
+    }
+}
+
+@media(max-width:320px) {
+    .lead__title {
+        max-width: 92.313%;
+        font-size: 2.5em;
+    }
 }
