--- a/russian-travel/blocks/photo-grid/__item/photo-grid__item.css
+++ b/russian-travel/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,5 +1,22 @@
-.photo-grid__item{
+.photo-grid__item {
     max-width: 284px;
-    min-width: 213px;
-    margin: 1%;
+}
+
+@media (max-width:1024px) {
+    .photo-grid__item {
+        max-width: 300px;
+    }
+}
+
+@media(max-width:768px) {
+    .photo-grid__item {
+        max-width: 352px;
+    }
+}
+
+@media(max-width:320px) {
+    .photo-grid__item {
+        max-width: 288px;
+        margin: 0 auto;
+    }
 }
