--- a/russian-travel/blocks/photo-grid/photo-grid.css
+++ b/russian-travel/blocks/photo-grid/photo-grid.css
@@ -1,9 +1,26 @@
 @import url(./__item/photo-grid__item.css);
-.photo-grid{
-        margin: 0 auto;
-        display: grid;
-        width: 92.5%;
-        grid-gap: 16px;
-        grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
-        grid-template-rows: auto;
+.photo-grid {
+    margin: 0 auto;
+    display: grid;
+    width: 94%;
+    grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
+    grid-template-rows: auto;
+    padding-bottom: 7.188%;
+    justify-items: center;
+    grid-gap: 16px;
+}
+
+@media(max-width:768px) {
+    .photo-grid {
+        width: 720px;
+        grid-template-columns: repeat(auto-fit, minmax(352px, 1fr));
     }
+}
+
+@media(max-width:320px) {
+    .photo-grid {
+        display: flex;
+        flex-direction: column;
+        width: 320px;
+    }
+}
