--- a/russian-travel/blocks/place/place.css
+++ b/russian-travel/blocks/place/place.css
@@ -3,13 +3,17 @@
 @import url(./__paragraph/place__paragraph.css);
 @import url(./__image/place__image.css);
 @import url(./__url-heading/place__url-heading.css);
-.place{
+.place {
     display: grid;
     grid-template-columns: repeat(2, 50%);
     grid-template-rows: repeat(4, min-content);
-    grid-template-areas:
-    "title url"
-    "title site"
-    "image text"
-    "image text"
+    grid-template-areas: "title url" "title site" "image text" "image text"
+}
+
+@media(max-width:320px) {
+    .place {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(3, min-content);
+        grid-template-areas: "title" "image" "text";
+    }
 }
