--- a/russian-travel/blocks/subtitle/subtitle.css
+++ b/russian-travel/blocks/subtitle/subtitle.css
@@ -3,3 +3,8 @@
     line-height: 1.6;
     letter-spacing: 0.1em;
 }
+@media (max-width:1024px){
+    .subtitle{
+        font-size: 0.83em;
+    }
+}
