--- a/russian-travel/blocks/title/title.css
+++ b/russian-travel/blocks/title/title.css
@@ -1,4 +1,16 @@
-.title{
+.title {
     font-size: 5em;
     line-height: 1em;
+}
+
+@media (max-width:1024px) {
+    .title {
+        font-size: 4em;
+    }
+}
+
+@media (max-width:768px) {
+    .title {
+        font-size: 3em;
+    }
 }
