--- a/russian-travel/blocks/place/__title/place__title.css
+++ b/russian-travel/blocks/place/__title/place__title.css
@@ -1,7 +1,8 @@
 .place__title {
     grid-area: title;
     width: 50%;
-    margin: 10% 0 7%;
+    margin: 0;
+    padding-bottom: 5%;
 }
 
 @media(max-width:320px) {
