--- a/russian-travel/blocks/place/place.css
+++ b/russian-travel/blocks/place/place.css
@@ -6,14 +6,14 @@
 .place {
     display: grid;
     grid-template-columns: repeat(2, 50%);
-    grid-template-rows: repeat(4, min-content);
-    grid-template-areas: "title url" "title site" "image text" "image text"
+    grid-template-rows: repeat(3, min-content);
+    grid-template-areas: "title url" "title link" "image text";
+    padding-bottom: 5%;
 }
 
 @media(max-width:320px) {
     .place {
         grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(3, min-content);
         grid-template-areas: "title" "image" "text";
     }
 }
