--- a/russian-travel/blocks/header/__logo/header__logo.css
+++ b/russian-travel/blocks/header/__logo/header__logo.css
@@ -2,8 +2,8 @@
     width: 177px;
 }
 
-@media(max-width:320px) {
+@media (max-width:320px) {
     .header__logo {
-        width: 142px
+        width: 142px;
     }
 }
