--- a/russian-travel/blocks/photo-grid/photo-grid.css
+++ b/russian-travel/blocks/photo-grid/photo-grid.css
@@ -10,14 +10,14 @@
     grid-gap: 16px;
 }
 
-@media(max-width:768px) {
+@media (max-width:768px) {
     .photo-grid {
-        width: 720px;
+        max-width: 720px;
         grid-template-columns: repeat(auto-fit, minmax(352px, 1fr));
     }
 }
 
-@media(max-width:320px) {
+@media (max-width:320px) {
     .photo-grid {
         display: flex;
         flex-direction: column;
