--- a/russian-travel/blocks/place/__title/place__title.css
+++ b/russian-travel/blocks/place/__title/place__title.css
@@ -3,9 +3,10 @@
     width: 50%;
     margin: 0;
     padding-bottom: 5%;
+    font-weight: 900;
 }
 
-@media(max-width:320px) {
+@media (max-width:320px) {
     .place__title {
         font-size: 2em;
         width: 90%;
