--- a/russian-travel/fonts/fonts.css
+++ b/russian-travel/fonts/fonts.css
@@ -1,34 +1,31 @@
-/*@font-face {
+@font-face {
     font-family: 'Inter';
-    font-style:  normal;
+    font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url("./Inter-Regular.woff2") format("woff2"),
-         url("./Inter-Regular.woff") format("woff");
-  }*/
-  
-  @font-face {
+    src: url("./Inter-Regular.woff2") format("woff2"), url("./Inter-Regular.woff") format("woff");
+}
+
+@font-face {
     font-family: 'Inter';
-    font-style:  normal;
+    font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: url("./Inter-Bold.woff2") format("woff2"),
-         url("./Inter-Bold.woff") format("woff");
-  }
-  
-  @font-face {
+    src: url("./Inter-Bold.woff2") format("woff2"), url("./Inter-Bold.woff") format("woff");
+}
+
+@font-face {
     font-family: 'Inter';
-    font-style:  normal;
+    font-style: normal;
     font-weight: 900;
     font-display: swap;
-    src: url("./Inter-Black.woff2") format("woff2"),
-         url("./Inter-Black.woff") format("woff");
-  }
-  @font-face {
-     font-family: 'Inter';
-     font-style:  normal;
-     font-weight: 200;
-     font-display: swap;
-     src: url("./Inter-ExtraLight.woff2") format("woff2"),
-          url("./Inter-ExtraLight.woff") format("woff");
-   }
+    src: url("./Inter-Black.woff2") format("woff2"), url("./Inter-Black.woff") format("woff");
+}
+
+@font-face {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 200;
+    font-display: swap;
+    src: url("./Inter-ExtraLight.woff2") format("woff2"), url("./Inter-ExtraLight.woff") format("woff");
+}
