--- a/russian-travel/pages/index.css
+++ b/russian-travel/pages/index.css
@@ -12,3 +12,6 @@
 @import url(../blocks/place/place.css);
 @import url(../blocks/footer/footer.css);
 @import url(../vendor/normailze.css);
+html {
+    background-color: #2a2c2f;
+}
